--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [not linux64]
+  skip: true  # [not linux64 and not aarch64]
 
 requirements:
   build:
